# riv25-codetalk

./: .gitignore  CLAUDE.md  Cargo.toml  INTERNAL.md  README.md  helper.sh  instance-setup.sh  package-lock.json  package.json
ch00/: helper.js  package-lock.json  package.json
ch00/cdk/: package-lock.json  package.json
ch00/cdk/lib/: dat401-stack.ts
ch00/lambda/: package-lock.json
ch00/lambda/src/: index.ts
ch01/: package.json
ch01/cdk/: package.json
ch01/cdk/lib/: dat401-stack.ts
ch01/lambda/: package.json
ch01/lambda/src/: db.ts  index.ts
ch02/: package.json
ch02/cdk/: tsconfig.json
ch02/lambda/src/: db.ts  index.ts
ch03/: package-lock.json  package.json
ch03/cdk/: package.json  tsconfig.json
ch03/cdk/lib/: dat401-stack.ts
ch03/lambda/: package.json
ch03/lambda/src/: db.ts  index.ts
ch04/: helper.js  package-lock.json  package.json
ch04/cdk/: cdk.json  package-lock.json  package.json  tsconfig.json
ch04/cdk/lib/: dat401-stack.ts
ch04/lambda/: package-lock.json  package.json
ch04/lambda/src/: db.ts  index.ts  schema.ts
ch05/: package.json
ch05/lambda/: package.json
ch05/lambda/src/: index.ts
ch06/: package.json
ch06/lambda/: package.json
ch07/: helper.js  package.json
ch07/cdk/: package.json
ch07/lambda/: package.json
helper/: Cargo.toml
helper/src/: cli.rs  credentials.rs  db.rs  lambda.rs  main.rs  setup.rs  stress.rs  tests.rs
starter-kit/: helper.js  insert-worker.js  package-lock.json  package.json  stress-worker.js
starter-kit/lambda/: package-lock.json  package.json
starter-kit/lambda/src/: db.ts  (+1 more)
(+1 files in other folders)
