[package]
name = "helper"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-dsql = "1"
aws-sdk-lambda = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
rand = "0.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
uuid = "1.0"
chrono = "0.4"
async-once-cell = "0.5.4"

